# treb

./: Cargo.toml  README.md
crates/treb/: Cargo.toml
crates/treb-gui/: Cargo.toml  index.html
crates/treb-gui/src/: app.rs  main.rs
