[package]
name = "treb-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.29" }
eframe = { version = "0.29", features = ["accesskit", "glow", "persistence"] }
log = "0.4"
serde = { workspace = true, features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)